<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_viewer"
        android:icon="@drawable/ic_viewer"
        android:title="@string/nav_viewer" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/nav_slicer"
        android:icon="@drawable/ic_slicer"
        android:title="@string/nav_slicer" />

    <item
        android:id="@+id/nav_files"
        android:icon="@drawable/ic_files"
        android:title="@string/nav_files" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
